# Vremenar-API

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE.md  README.md  codecov.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: CI.yml  codeql-analysis.yml
data/alerts/: germany.json  germany_stations.json  slovenia.json  slovenia_stations.json
data/stations/: ARSO.json  DWD.csv  DWD.current.csv
src/utils/: .pre-commit-config.yaml  dwd_current.py  dwd_get_stations.py  dwd_mosmix.py  dwd_mosmix_cache_cleanup.py  dwd_osm_query.py  dwd_stations_summary.py  pyproject.toml
src/utils/scripts/: dwd_cleanup.sh  dwd_update.sh
src/vremenar/: __init__.py  cli.py  definitions.py  exceptions.py  main.py  units.py  utils.py  worker.py
src/vremenar/api/: __init__.py  alerts.py  config.py  copyright.py  location.py  maps.py  stations.py  version.py  weather_map.py
src/vremenar/database/: __init__.py  redis.py  stations.py
src/vremenar/models/: __init__.py  alerts.py  common.py  location.py  maps.py  stations.py  weather.py
src/vremenar/sources/: __init__.py  arso.py  dwd.py  wrapper.py
src/vremenar/sources/arso/: __init__.py  maps.py  stations.py  utils.py
src/vremenar/sources/dwd/: __init__.py  maps.py  stations.py  utils.py
src/vremenar/sources/meteoalarm/: __init__.py  alerts.py  utils.py
src/vremenar/sources/rainviewer/: __init__.py  maps.py
src/vremenar/tests/: test_definitions.py  test_dwd_icon.py  test_exceptions.py  test_units.py
tests/: conftest.py
tests/api/: test_alerts.py  test_copyright.py  test_maps.py  test_stations.py  test_version.py
tests/fixtures/: DWD_MOSMIX.json  setup.sh  setup_fixtures.py
tests/unit/: __init__.py  test_definitions.py  test_exceptions.py
