[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vremenar"
description = ""
dynamic = ["version"]
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Tadej Novak", email = "tadej@tano.si" }]
requires-python = ">= 3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi == 0.128.*",
  "redis[hiredis] == 7.1.*",
  "httpx == 0.28.*",
  "astral == 3.2.*",
  "anyio",
  "asyncstdlib",
  "gunicorn",
  "uvicorn",
]

[dependency-groups]
dev = [
  "coverage[toml]",
  "gevent",
  "mypy == 1.19.1",
  "pre-commit",
  "pre-commit-hooks == 6.0.*",
  "pytest >= 8.0",
  "pytest-asyncio",
  "pytest-cov",
  "requests",
  "ruff == 0.15.0",
  "types-python-dateutil",
  "types-redis",
  "ty == 0.0.15",
]

[project.scripts]
vremenar = "vremenar.cli:main"

[tool.hatch.version]
path = "src/vremenar/__init__.py"

[tool.coverage.run]
branch = true
source = ["src/vremenar"]
omit = ["src/vremenar/cli.py", "src/vremenar/worker.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if self.debug:",
  "if debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
ignore_errors = true
omit = ["tests/*"]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "FAST",  # fastapi
  "YTT",   # flake8-2020
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flakey-bandit
  "BLE",   # flake8-blind-except
  "FBT",   # flake8-boolean-trap
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TC",    # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "FLY",   # flynt
  "I",     # isort
  "C90",   # mccabe (complexity)
  "N",     # pep8-naming
  "PERF",  # perflint
  "E",     # pycodestyle
  "W",     # pycodestyle
  "DOC",   # pydoclint
  "D",     # pydocstyle
  "F",     # pyflakes
  "PGH",   # pygrep-hooks
  "PL",    # pylint
  "UP",    # pyupgrade
  "FURB",  # refurb
  "RUF",   # ruff
  "TRY",   # tryceratops
]
ignore = [
  "PLR2004", # magic-value-comparison (not wanted)
  "D203",    # one-blank-line-before-class (conflicting with no-blank-line-before-class)
  "D213",    # multi-line-summary-second-line (conflicting with multi-line-summary-first-line)
  "FBT001",  # boolean-positional-arg-in-function-definition (not wanted)
  "FBT002",  # boolean-default-value-in-function-definition (not wanted)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["PLC0415", "S101"]

[tool.ty.rules]
all = "error"

[tool.mypy]
plugins = "pydantic.mypy"
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "astral.sun"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=vremenar --cov-config=.coveragerc --cov-report=term-missing:skip-covered --cov-report xml --cov-report html:coverage --junitxml=junit.xml -o junit_family=legacy"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
