[tool.poetry]
name = "vremenar-utils"
version = "0.1.0"
description = ""
authors = ["Tadej Novak <tadej@tano.si>"]

[tool.poetry.dependencies]
python = "^3.8"
brightsky = "^1.0.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-quotes = "^3.2.0"
mypy = "^0.790"
pep8-naming = "^0.11.1"
pre-commit = "^2.11.1"
pre-commit-hooks = "^3.4.0"
pyupgrade = "^2.7.4"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
