[tool.poetry]
name = "vremenar-utils"
version = "0.1.1"
description = ""
authors = ["Tadej Novak <tadej@tano.si>"]

[tool.poetry.dependencies]
python = "^3.8"
brightsky = "^1.0.7"
httpx = "^0.17.1"
wheel = "^0.36.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.2.0"
mypy = "^0.812"
pep8-naming = "^0.11.1"
pre-commit = "^2.12.1"
pre-commit-hooks = "^3.4.0"
pyupgrade = "^2.13.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
